More alignment fixes
More alignment fixes

--- a/old-site/css/contact.css
+++ b/old-site/css/contact.css
@@ -78,7 +78,6 @@ h1 {
   bottom: 40%;
   margin: auto;
 }
-.middle 
 .twitter {
   width: 50%;
 }
@@ -131,7 +130,7 @@ footer p {
 }
 /* ------------------------For Mobile----------------------------- */
 @media (max-width: 767px) {
-.body-wrap {
+  .body-wrap {
   background: #F2F2F2;
   margin: 0 auto;
   width: 100%;
@@ -139,5 +138,9 @@ footer p {
   }
   body, html {
     padding: 0;
+  }
+  .twitter {
+    width: 100%;
+    height: 60%;
   }
 }
